--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "@types/three": "^0.178.1",
     "vite": "^6.2.2",
     "vite-plugin-restart": "^0.4.2"
   },
